# Reward-Model-Training

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: evaluate_reward.py  tiny_demo.py  train_reward.py
src/reward_model/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py
