[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reward-model-training"
version = "1.0.0"
description = "Reward modeling with GPT-2 + LoRA + TRL RewardTrainer (pairwise preference data)."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
